src/test/ui/e0119/so-37347311.stderr
error[E0119]: conflicting implementations of trait `std::convert::From<MyError<_>>` for type `MyError<_>`:
  --> $DIR/so-37347311.rs:21:1
   |
21 | impl<S: Storage> From<S::Error> for MyError<S> { //~ ERROR conflicting implementations
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> std::convert::From<T> for T;

error: aborting due to previous error

